infra/prod-k8s/ingress-svc.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-svc
  labels:
    name: ingress-svc
spec:
  ingressClassName: nginx
  rules:
    - host: app.techmaticlabs.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: webapp-clusterip
                port:
                  number: 3000
    - host: api.techmaticlabs.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: gateway-clusterip
                port:
                  number: 80
    - host: id.techmaticlabs.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: identity-clusterip
                port:
                  number: 80
